# slurm_tools

./: README.md  do_slurm_job.py  pyproject.toml
slurm_tools/: .condasetup_bash  accelerate_slurm.sh  attach.py  conda_one_per_gpu.sh  dais_vllm.sh  dais_vllm_template.sh  do_slurm_job.py  monitor_gpu.sh  monitor_newest_slurm_run.py  notify_slack.py  param_sweep.py  redo.py  resolve_group_squeue.py  run_slurm_apptainer.sh  run_slurm_conda.sh  run_slurm_dais.sh  run_slurm_dais_modules.sh  sglang.slurm  sglang_apptainer_plus.slurm  sglang_conda.slurm  sglang_conda_plus.slurm  slurm_time_until_start.py  start_sglang.py  start_sglang_viper.py  util.py  wait_job_dais.sh
